--- a/apps/patch-console/index.html
+++ b/apps/patch-console/index.html
@@ -82,7 +82,7 @@
               <div class="control-grid">
                 <div class="field">
                   <label>언어</label>
-                  <input id="langs-input" type="text" value="kr,en,jp" placeholder="kr,en,jp,cn">
+                  <input id="langs-input" type="text" value="kr,en,jp,cn" placeholder="kr,en,jp,cn">
                 </div>
                 <div class="field">
                   <label>범위 모드</label>
