--- a/pages/pay-calc/kr/index.html
+++ b/pages/pay-calc/kr/index.html
@@ -7,7 +7,7 @@ title: "과금 계산기 - 페르소나5 더 팬텀 X 루페르넷"
 description: "페르소나5 더 팬텀 X 과금 계산기"
 image: "/assets/img/home/SEO.png"
 language: kr
-permalink: /pay-calc/
+permalink: /kr/pay-calc/
 alternate_urls:
   ko: /kr/pay-calc/
 ---
