revelaition setting table

--- a/apps/revelation-setting/index.html
+++ b/apps/revelation-setting/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 custom_css: []
-custom_js: [character/spoiler-state, character/character-list]
+custom_js: [tooltip, character/spoiler-state, character/character-list]
 custom_data: [/data/character_info.js]
 permalink: /revelation-setting/
 language: kr
