--- a/pages/defense-calc/kr/index.html
+++ b/pages/defense-calc/kr/index.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: []
 custom_js: [tooltip, character/spoiler-state, character/character-list, defense/defense-i18n]
-custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js, wonder/weapons.js, wonder/skills.js,
+custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js, calc/defense-mutually-exclusive-rules.js, wonder/weapons.js, wonder/skills.js,
   /data/character_info.js]
 title: "방어력 감소 계산기 | 루페르넷 페르소나5 더 팬텀 X"
 description: "페르소나5 더 팬텀 X 방어력 감소 계산기"
