--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: []
 custom_js: [tooltip, character/spoiler-state, character/character-list, defense/defense-i18n]
-custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js, wonder/weapons.js, wonder/skills.js,
+custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js, calc/defense-mutually-exclusive-rules.js, wonder/weapons.js, wonder/skills.js,
   /data/character_info.js]
 permalink: /defense-calc/
 language: kr
