--- a/pages/article/jp/index.html
+++ b/pages/article/jp/index.html
@@ -3,7 +3,7 @@ layout: default
 custom_css: []
 custom_js: []
 custom_data: ["/data/character_info.js"]
-title: "ガイド | Lufelnet ペルソナ5 ザ・ファントム X"
+title: "攻略記事 | Lufelnet ペルソナ5 ザ・ファントム X"
 description: "ペルソナ5 ザ・ファントムX 攻略ガイド"
 image: "/assets/img/home/SEO.png"
 language: jp
