--- a/pages/character/en/rin-lion-dance.html
+++ b/pages/character/en/rin-lion-dance.html
@@ -5,8 +5,8 @@ custom_js: [character/cha_video, character/cha_detail, tooltip, detail/dot-carou
   marked.min, character/cha_stats, character/character-i18n, character/helpmodal, character/QEVEL]
 custom_data: [/data/character_info.js, revelations/revelations.js,
   tooltip.js, wonder/weapons.js]
-title: "Yaoling·Lion Dance Build Guide | Lufelnet Persona 5: The Phantom X"
-description: "P5X Yaoling·Lion Dance character build guide. Recommended setup, skills, revelation, and exclusive weapon info."
+title: "Firecracker Yaoling Build Guide | Lufelnet Persona 5: The Phantom X"
+description: "P5X Firecracker Yaoling character build guide. Recommended setup, skills, revelation, and exclusive weapon info."
 image: "/assets/img/character-cards/%EC%95%BC%EC%98%A4%EB%A7%81%C2%B7%EC%82%AC%EC%9E%90%EB%AC%B4.webp"
 language: en
 permalink: /en/character/rin-lion-dance/
