--- a/pages/article/en/technical-master.html
+++ b/pages/article/en/technical-master.html
@@ -4,7 +4,7 @@ custom_css: []
 custom_js: []
 custom_data: ["/data/character_info.js"]
 title: "TECHNICAL Enhancement - Technical Precision - Lufelnet"
-description: "TECHNICAL RIN·Lion Dance and MATOI are a comp that actively utilizes TECHNICALs. TECHNICALs are triggered when performing specific elemental attacks against foes with elemental ailments such as Burn, Windswept, Shock, and Freeze. RIN·Lion Dance activates Fire Technicals through enhanced melee attacks via S3..."
+description: "TECHNICAL Rin·Firecracker and MATOI are a comp that actively utilizes TECHNICALs. TECHNICALs are triggered when performing specific elemental attacks against foes with elemental ailments such as Burn, Windswept, Shock, and Freeze. Rin·Firecracker activates Fire Technicals through enhanced melee attacks via S3..."
 image: "/apps/guides/data/assets/technical-master/mio.gif"
 language: en
 guide_id: "technical-master"
