--- a/pages/character/kr/rin-firecracker.html
+++ b/pages/character/kr/rin-firecracker.html
@@ -5,16 +5,16 @@ custom_js: [character/cha_video, character/cha_detail, tooltip, detail/dot-carou
   marked.min, character/cha_stats, character/character-i18n, character/helpmodal, character/QEVEL]
 custom_data: [/data/character_info.js, revelations/revelations.js,
   tooltip.js, wonder/weapons.js]
-title: "瑤鈴・新春 育成ガイド | Lufelnet ペルソナ5 ザ・ファントム X"
-description: "P5X 瑤鈴・新春の育成ガイド。推奨セッティング、スキル、啓示、専用武器情報。"
+title: "리 야오링·사자무 가이드 | 루페르넷 페르소나5 더 팬텀 X"
+description: "페르소나5 더 팬텀 X 리 야오링·사자무 육성 가이드. 추천 세팅, 스킬, 계시, 전용무기 정보."
 image: "/assets/img/character-cards/%EC%95%BC%EC%98%A4%EB%A7%81%C2%B7%EC%82%AC%EC%9E%90%EB%AC%B4.webp"
-language: jp
-permalink: /jp/character/rin-lion-dance/
+language: kr
+permalink: /kr/character/rin-firecracker/
 character_kr_name: "야오링·사자무"
-character_slug: rin-lion-dance
+character_slug: rin-firecracker
 alternate_urls:
-  ko: /kr/character/rin-lion-dance/
-  en: /en/character/rin-lion-dance/
-  jp: /jp/character/rin-lion-dance/
+  ko: /kr/character/rin-firecracker/
+  en: /en/character/rin-firecracker/
+  jp: /jp/character/rin-firecracker/
 ---
 {% include character-detail-body.html %}
