--- a/apps/guides/pages/damage-calc.html
+++ b/apps/guides/pages/damage-calc.html
@@ -5,7 +5,7 @@ custom_js: []
 permalink: /article/damage-calc/
 language: kr
 title: 페르소나5X 대미지 계산 공식에 대해 - 루페르넷
-description: 페르소나5 더 팬텀 X 대미지 계산 공식
+description: ⚠️ 주의사항 > 본 문서는 게임 초기 중국 Q&A 내용을 기반으로 작성되었습니다. 대미지 계산의 방향성과 구조를 이해하는 데 참고하시되, 정확한 수치는 실제 게임과 차이가 발생할 수 있습니다. > 또한 정확한 대미지 계산을 시도하는 것은 권장하지 않습니다. 대부분의 ...
 image: /apps/guides/data/assets/damage-calc/damage.gif
 ---
 
@@ -22,20 +22,19 @@ image: /apps/guides/data/assets/damage-calc/damage.gif
 
 <script defer src="{{ site.baseurl }}/i18n/service/i18n-adapter.js?v={{ site.time | date: '%s' }}"></script>
 <script>
-    document.addEventListener('DOMContentLoaded', async () => {
-        const currentLang = typeof LanguageRouter !== 'undefined' ? LanguageRouter.getCurrentLanguage() : 'kr';
-        if (typeof initPageI18n === 'function') {
-            await initPageI18n('guides');
-            if (typeof setLang === 'function') {
-                await setLang(currentLang);
-            }
-        } else if (window.I18nService && typeof window.I18nService.init === 'function') {
-            await window.I18nService.init('guides', currentLang);
+document.addEventListener('DOMContentLoaded', async () => {
+    const currentLang = typeof LanguageRouter !== 'undefined' ? LanguageRouter.getCurrentLanguage() : 'kr';
+    if (typeof initPageI18n === 'function') {
+        await initPageI18n('guides');
+        if (typeof setLang === 'function') {
+            await setLang(currentLang);
         }
+    } else if (window.I18nService && typeof window.I18nService.init === 'function') {
+        await window.I18nService.init('guides', currentLang);
+    }
 
-        Navigation.load('article');
-        VersionChecker.check();
-        Guides.loadGuide('damage-calc');
-    });
+    Navigation.load('article');
+    VersionChecker.check();
+    Guides.loadGuide('damage-calc');
+});
 </script>
-
